# pyTMD_turbo

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  README.md  benchmark_comparison.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: audit.yml  lint.yml  python-request.yml  test.yml  update-provider-database.yml
docs/: aux_api.md  cache.md  index.md  optimization.md
examples/: README.md  benchmark_report.html  benchmark_results.json  numba_benchmark.py  phase_benchmark.py  phase_solution_test.py  phase_visualization.html  phase_visualization.py  run_benchmark.py  set_comparison.html  set_comparison.py
pyTMD_turbo/: __init__.py  cache.py  compute.py  constituents.py  interpolate.py  phase.py  spatial.py
pyTMD_turbo/astro/: __init__.py  ephemeris.py  potential.py
pyTMD_turbo/data/: database.json  doodson.json
pyTMD_turbo/io/: ATLAS.py  FES.py  OTIS.py  __init__.py  dataset.py  model.py
pyTMD_turbo/predict/: __init__.py  cache.py  cache_optimized.py  equilibrium.py  harmonic.py  harmonic_numba.py  infer_minor.py  solid_earth.py
test/: README.md  conftest.py  test_astro.py  test_atlas_read.py  test_atlas_turbo.py  test_benchmark.py  test_cache.py  test_cache_control.py  test_cache_env.py  test_cache_matrix.py  test_compare_pytmd.py  test_coordinates.py  test_e2e_models.py  test_equilibrium_tide.py  test_fes_predict.py  test_fes_turbo.py  test_infer_minor.py  test_interpolate.py  test_love_numbers.py  test_lunar.py  test_math.py  test_mean_longitudes.py  test_model.py  test_noaa_queries.py  test_otis_read.py  test_otis_turbo.py  test_perth3_read.py  test_perth5_predict.py  test_phase4.py  test_phase5.py  test_pole_tide.py  test_set.py  test_solar.py  test_solid_earth.py  test_spatial.py  test_tide_currents.py  test_tmd_accessor.py  test_utilities.py
test.old/: __init__.py  test_arguments.py  test_constituents.py  test_integration.py
