[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTMD_turbo"
version = "0.2.0"
description = "High-performance tidal prediction module - a derivative work of pyTMD"
keywords = [
    "Ocean Tides",
    "Solid Earth Tides",
    "Tidal Prediction",
    "High Performance",
]
authors = [
    {name = "tkykszk"}
]
maintainers = [
    {name = "tkykszk"}
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy>=1.10.1",
    "xarray",
    "netCDF4"
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Oceanography",
]

[project.urls]
Repository = "https://github.com/tkykszk/pyTMD_turbo"

[project.optional-dependencies]
numba = ["numba"]
dev = ["pytest>=4.6", "pytest-cov", "pytest-xdist", "pyTMD>=3.0", "timescale"] 

[tool.setuptools.packages.find]
exclude = ["providers*", "run*", "test*"]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".git"
addopts = "--verbose --capture=no -W ignore::UserWarning"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "pyTMD_turbo",
]
omit = [
    "pyTMD_turbo/*/tests/*",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    ".git",
    "build",
    "doc",
    "run",
    "test",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

